@@ -600,6 +600,7 @@ special_defensive_bombard_rules = []
 ;     using its attack strength to exert ZoC.
 ;   aerial: Air units can exert zone of control if their type has the "Zone of Control" option checked. Additionally, they must be able to perform the
 ;     bombing mission, have non-zero bombard strength, and non-zero operational range.
+;   not-from-inside: Land units may not exert zone of control while inside a transport (armies do not count as transports)
 ; Like for defensive bombard, all options can be activated by setting to [all] (with or without the brackets), and order does not matter.
 special_zone_of_control_rules = []
 
