@@ -13,6 +13,8 @@
 - Option to prevent land anti-air units from intercepting overflying aircraft while they're loaded in a naval transport
   - Named no_land_anti_air_from_inside_naval_transport
 - Option to prevent units from being enslaved after being destroyed by lethal bombard named prevent_enslaving_by_bombardment
+- Put rule stopping land units inside transports from exerting zone of control behind special ZoC setting "not-from-inside"
+  - Previously this rule change could not be turned off by the config
 - Polish districts
   - Prevent districts from being built on natural wonders (regression bug)
   - Fix minimum tile count distance between natural wonders
